# ZeroNiSeisan

./: .dockerignore  .env  Cargo.toml  Dockerfile  readme.md
configuration/: production.yaml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
